--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -55,7 +55,6 @@ table {
 html, body {
     height: 100%;
     font-family: 'Titillium Web', sans-serif;
-	font-size: 62.5%;
 }
 
 h1, h2, h3, h4, h5 {
@@ -66,5 +65,61 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 
+html {
+	font-size: 62.5%;
+}
+
 .container {
+	margin: 0 auto;
+	width: 1024px;
+	border: 1px solid grey;
+}
+
+header {
+	display: inline-block;
+	position: fixed;
+	top: 0;
+	z-index: 1;
+	width: 1024px;
+	background-color: darkblue;
+	height: 80px;
+}
+
+nav {
+	padding: 20px 0px;
+	display: inline-block;
+	padding-left: 57px;
+	vertical-align: top;
+	margin-top: 18px;
+	}
+
+nav a {
+	font-size: 1.5rem;
+	color: white;
+	text-decoration: none;
+	margin: 0px 45px 0px 16px;
+	padding: 0px;
+
+}
+
+.logo {
+	display: inline-block;
+	margin-left: 48px;
+	background-color: white;
+	margin-top: 27px;
+
+}
+
+h1 {
+	text-align: center;
+	font-size: 7.5rem;
+	font-weight: 600;
+	display: inline-block;
+}
+
+.top {
+	display: inline-block;
+	padding: 40px;
+	padding-left: 70px;
+	margin-top: 80px;
 }
