--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -165,6 +165,8 @@ nav a {
 	width: 880px;
 	margin: 0 auto;
 	margin-top: 38px;
+	padding-bottom: 38px;
+	border-bottom: 1px solid grey;
 }
 
 .text-box {
@@ -178,7 +180,6 @@ nav a {
 }
 
 .text-box h2 {
-	/* margin-top: 30px; */
 	font-weight: 500;
 	font-size: 1.7rem;
 	text-align: left;
@@ -196,3 +197,9 @@ nav a {
 	width: 100%;
 	margin-bottom: 30px;
 }
+
+.bottom-mid .text-box {
+	width: 32%;
+	margin-right: 1%;
+}
+
